--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       - echo Logging in to Amazon ECR...
       - aws --version
       - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
-      - REPOSITORY_URI=246540942872.dkr.ecr.us-east-1.amazonaws.com/nodejs-shark
+      - REPOSITORY_URI=210214199855.dkr.ecr.ap-south-1.amazonaws.com/kalyanweb
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
       #- aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 246540942872.dkr.ecr.us-east-1.amazonaws.com
