--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,10 +6,10 @@ phases:
       - echo Logging in to Amazon ECR...
       - aws --version
       - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
-      - REPOSITORY_URI=210214199855.dkr.ecr.ap-south-1.amazonaws.com/kalyanweb
+      - REPOSITORY_URI=850769113977.dkr.ecr.us-east-1.amazonaws.com/sampledocker
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
-      #- aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 246540942872.dkr.ecr.us-east-1.amazonaws.com
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 850769113977.dkr.ecr.us-east-1.amazonaws.com
   build:
     commands:
       - echo Build started on `date`
