--- a/appspec.yml
+++ b/appspec.yml
@@ -4,10 +4,10 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/developer/dockernodejs
+    destination: /home/ec2-user/dockernodejs
 permissions:
-  - object: /home/developer
-    owner: developer  ### Add user kalyan in the ec2 instances and we can deploy these file to the ec2-instances. Else codedeploy fails for not mentioning appropriate user in the appspec.yml file
+  - object: /home/ec2-user
+    owner: ec2-user  ### Add user kalyan in the ec2 instances and we can deploy these file to the ec2-instances. Else codedeploy fails for not mentioning appropriate user in the appspec.yml file
     group: docker
 hooks:
   BeforeInstall:
