--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,6 +21,7 @@ phases:
       - echo Writing image definitions file...
       - printf '[{"name":"%s","imageUri":"%s"}]' $CONTAINER_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 artifacts:
-    files: 
-    - imagedefinitions.json
-    - appspec.yml
+    files:
+    - '**/*'
+    #- imagedefinitions.json
+    #- appspec.yml
