--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,6 +26,6 @@ phases:
       #- printf '[{"name":"%s","imageUri":"%s"}]' $CONTAINER_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 artifacts:
     files:
-    - '**/*'
-    #- imagedefinitions.json
+    #- '**/*'
+    - imagedefinitions.json
     #- appspec.yml
